Created sequelize models, create endpoints to transact against models.

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,14 @@
                     GET - api/getMealPlan - Gets a one day meal plan which includes breakfast, lunch and dinner meals.
                 </li>
                 <li class='list-group-item'>
-                    GET - api/user - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac faucibus
-                    nulla, vitae egestas massa. Ut ultricies, lacus a faucibus lobortis, risus leo aliquam augue.
+                    GET - api/createUser - Creates a static user
+                </li>
+                <li class='list-group-item'>
+                    GET - api/associateAllegry - Creates a static allegry and associdates the allegry to the user
+                    created in the previous endpoint.
+                </li>
+                <li class='list-group-item'>
+                    GET - api/getUser - Gets all users and associated allergies.
                 </li>
             </ul>
         </div>
