--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
         <div class='card'>
             <div class='card-body'>
                 <h5 class='card-title'>GET Requests</h5>
+                <p class='card-text'>Testing workflow, hit the following endpoints in order: /api/createUser,
+                    /api/associateAllegry, /api/getUser</p>
             </div>
             <ul class='list-group list-group-flush'>
                 <li class='list-group-item'>
