Changed doc title

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <div class='container'>
         <div class='jumbotron'>
-            <h1 class='display-4'>Hello, world!</h1>
+            <h1 class='display-4'>Eat Smarter</h1>
             <p class='lead'>Provices APIs (REST) to retrieve/update information to and from Eat Smarter database</p>
         </div>
     </div>
