Updated documentation, added model associations

--- a/public/index.html
+++ b/public/index.html
@@ -31,17 +31,17 @@
             </div>
             <ul class='list-group list-group-flush'>
                 <li class='list-group-item'>
-                    GET - api/getMealPlan - Gets a one day meal plan which includes breakfast, lunch and dinner meals.
+                    api/getMealPlan - Gets a one day meal plan which includes breakfast, lunch and dinner meals.
                 </li>
                 <li class='list-group-item'>
-                    GET - api/createUser - Creates a static user
+                    api/createUser - Creates a static user
                 </li>
                 <li class='list-group-item'>
-                    GET - api/associateAllegry - Creates a static allegry and associdates the allegry to the user
+                    api/associateAllegry - Creates a static allegry and associdates the allegry to the user
                     created in the previous endpoint.
                 </li>
                 <li class='list-group-item'>
-                    GET - api/getUser - Gets all users and associated allergies.
+                    api/getUser - Gets all users and associated allergies.
                 </li>
             </ul>
         </div>
@@ -51,7 +51,7 @@
             </div>
             <ul class='list-group list-group-flush'>
                 <li class='list-group-item'>
-                    GET - api/getMealPlan - Gets a one day meal plan which includes breakfast, lunch and dinner meals.
+                    api/associateAllegry - Gets a one day meal plan which includes breakfast, lunch and dinner meals.
                 </li>
                 <li class='list-group-item'>
                     GET - api/user - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac faucibus
