Changed index to link to github page.

--- a/public/index.html
+++ b/public/index.html
@@ -19,45 +19,11 @@
         <div class='jumbotron'>
             <h1 class='display-4'>Eat Smarter</h1>
             <p class='lead'>Provices APIs (REST) to retrieve/update information to and from Eat Smarter database</p>
-        </div>
-    </div>
-
-    <div class='container'>
-        <div class='card'>
-            <div class='card-body'>
-                <h5 class='card-title'>GET Requests</h5>
-                <p class='card-text'>Testing workflow, hit the following endpoints in order: /api/createUser,
-                    /api/associateAllegry, /api/getUser</p>
-            </div>
-            <ul class='list-group list-group-flush'>
-                <li class='list-group-item'>
-                    api/getMealPlan - Gets a one day meal plan which includes breakfast, lunch and dinner meals.
-                </li>
-                <li class='list-group-item'>
-                    api/createUser - Creates a static user
-                </li>
-                <li class='list-group-item'>
-                    api/associateAllegry - Creates a static allegry and associdates the allegry to the user
-                    created in the previous endpoint.
-                </li>
-                <li class='list-group-item'>
-                    api/getUser - Gets all users and associated allergies.
-                </li>
-            </ul>
-        </div>
-        <div class='card mt-2'>
-            <div class='card-body'>
-                <h5 class='card-title'>POST Requests</h5>
-            </div>
-            <ul class='list-group list-group-flush'>
-                <li class='list-group-item'>
-                    api/associateAllegry - Gets a one day meal plan which includes breakfast, lunch and dinner meals.
-                </li>
-                <li class='list-group-item'>
-                    GET - api/user - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac faucibus
-                    nulla, vitae egestas massa. Ut ultricies, lacus a faucibus lobortis, risus leo aliquam augue.
-                </li>
-            </ul>
+            <hr class='my-4'>
+            <p class='lead'>
+                <a class='btn btn-primary btn-lg' href='https://github.com/TakeAWalk/Eat-Smarter-Backend' role='button'>View
+                    on GitHub</a>
+            </p>
         </div>
     </div>
 
